tests/diagnostics/expressions/field_access/non_struct/expect.txt
# exit: 1
lib.coppice:3:14: error: cannot access field 'y' on non-struct type int64
      return x.y
               ^
